tests/NormalTests/paczka2/big_fuzzy/82582639.err
Error in line 13: JMu66VGGcZK A336 75,7
Error in line 16: JMu66VGGcZK S79 13,6
Error in line 20: S79 S79 16,7
Error in line 30: F82hI A625 66,9
Error in line 43: nFUSl A625 ~0,3
Error in line 53: S79 A336 89,7
Error in line 58: JMu66VGGcZK A819 18,9
Error in line 74: Iw69Oql3nT A819 62,4
Error in line 72: nFUSl A625 211,3
Error in line 78: nFUSl A819 53,8
Error in line 92: qsseu3Yt A625 38,7
Error in line 97: S79 A336 120,1
Error in line 90: JMu66VGGcZK A819 58,0
Error in line 108: Iw69Oql3nT A625 53,6
Error in line 110: JMu66VGGcZK A336 71,3
Error in line 107: qsseu3Yt A336 41,9
Error in line 127: JMu66VGGcZK A625 44,0
Error in line 126: xLCvMKyNonS S79 71,2
Error in line 144: F82hI A625 :9,4
Error in line 134: Iw69Oql3nT A819 125,8
Error in line 158: JMu66VGGcZK A336 87,7
Error in line 161: F82hI A625 9,
Error in line 170: Iw69Oql3nT S79 41,2
Error in line 187: F82hI S79 95,7
Error in line 196: Iw69Oql3nT A819 74,9
Error in line 191: xLCvMKyNonS A819 89,5
Error in line 205: xLCvMKyNonS A625 16,7
Error in line 213: nFUSl S79 -1,6
Error in line 235: xLCvMKyNonS A625 61,5
Error in line 242: F82hI A625 392,2
Error in line 233: JMu66VGGcZK S79 35,7
Error in line 247: JMu66VGGcZK A819 32,5
